fix(docs): positioning of improve button alignment

--- a/_assets/styles/_custom.scss
+++ b/_assets/styles/_custom.scss
@@ -40,10 +40,15 @@ body {
 
 .docs {
   padding-bottom: 3rem;
+
+  article h1 {
+    display: inline-block;
+  }
 }
 
 .improve {
   margin: .67em .67em 0 0;
+  display: flex;
 }
 
 .icon {
